--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -85,13 +85,16 @@ jobs:
         git clone https://gitlab.com/QEF/q-e.git
         cd q-e
         git checkout qe-7.0
-        ./configure FC="ccache $FC" --prefix="$HOME/opt"
-        plumed patch --engine qespresso-7.0 --patch
-        make pw
-        make install        
+        ./configure --prefix="$HOME/opt" &&         plumed patch --engine qespresso-7.0 -p           && make pw && make install && plumed patch --engine qespresso-7.0 -r
+        ./configure --prefix="$HOME/opt-runtime" && plumed patch --engine qespresso-7.0 -p --runtime && make pw && make install && plumed patch --engine qespresso-7.0 -r
+        ./configure --prefix="$HOME/opt-static" &&  plumed patch --engine qespresso-7.0 -p --static  && make pw && make install && plumed patch --engine qespresso-7.0 -r
     - name: Check files
       run: |
-        ls -ltr $HOME/opt/bin $HOME/opt/lib
-        nm -C $HOME/opt/bin/pw.x | grep PLMD
-        ldd $HOME/opt/bin/pw.x
+        for prefix in $HOME/opt $HOME/opt-runtime $HOME/opt-static
+        do
+            ls -ltr $prefix/bin
+            ls -ltr $prefix/lib
+            nm -C $prefix/bin/pw.x | grep PLMD
+            ldd $prefix/bin/pw.x
+        done
 
