--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -76,6 +76,7 @@ jobs:
         ccache -s -M 100M
         git clone https://github.com/plumed/plumed2.git
         cd plumed2
+        git checkout qe-f90-interface
         ./configure CXX="ccache $CXX" --disable-dependency-tracking LDFLAGS=-Wl,-rpath,$LD_LIBRARY_PATH --prefix="$HOME/opt"
         make -j 4
         make install
