Revert "Update ci.yml"
This reverts commit 1c17c2e40ebaf073d456ce6db80d52041b0da7d0.

Unfortunately does not work

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -87,7 +87,7 @@ jobs:
         git checkout qe-7.0
         ./configure --prefix="$HOME/opt"
         plumed patch --engine qespresso-7.0 -p
-        make -j 4 pw
+        make pw
         make install
     - name: Check files
       run: |
