--- a/test_H2O/md.in
+++ b/test_H2O/md.in
@@ -23,9 +23,11 @@
     mixing_beta = 0.7
     conv_thr =  1.0d-8
 /
+ &ions
+ /
 ATOMIC_SPECIES
-    O    15.9994    O.pbe-rrkjus_psl.1.0.0
-    H    1.00794    H.pbe-rrkjus_psl.1.0.0
+    O    15.9994    O.pbe-n-rrkjus_psl.1.0.0.UPF
+    H    1.00794    H.pbe-rrkjus_psl.1.0.0.UPF
 ATOMIC_POSITIONS { Angstrom }
 O    0.0  0.0  0.0
 H    0.77 0.0  0.62
