--- a/test_H2O/md.in
+++ b/test_H2O/md.in
@@ -2,7 +2,7 @@
     calculation='md'
     pseudo_dir='./'
     dt=20
-    nstep=50
+    nstep=1 ! I need only this to test if the masses are passed correclty
     prefix='water'
     tefield=.true. 
     dipfield=.true.
@@ -26,8 +26,8 @@
  &ions
  /
 ATOMIC_SPECIES
-    O    15.9994    O.pbe-n-rrkjus_psl.1.0.0.UPF
     H    1.00794    H.pbe-rrkjus_psl.1.0.0.UPF
+    O    15.9994    O.pbe-n-rrkjus_psl.1.0.0.UPF
 ATOMIC_POSITIONS { Angstrom }
 O    0.0  0.0  0.0
 H    0.77 0.0  0.62
