--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -74,7 +74,7 @@ jobs:
     - name: Build PLUMED
       run: |
         ccache -s -M 100M
-        git clone git@github.com:Iximiel/plumed2.git
+        git clone https://github.com/Iximiel/plumed2.git
         cd plumed2
         git checkout pwPatchMasses
         ./configure CXX="ccache $CXX" --disable-dependency-tracking LDFLAGS=-Wl,-rpath,$LD_LIBRARY_PATH --prefix="$HOME/opt"
