trying to make the test run in the CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -100,3 +100,6 @@ jobs:
     - name: Run tests
       run: |
         ./run_tests.sh
+    - name: Run other tests
+      run: |
+        ./run_tests2.sh
