Update ci.yml to check the 7.2 patch

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -74,8 +74,9 @@ jobs:
     - name: Build PLUMED
       run: |
         ccache -s -M 100M
-        git clone https://github.com/plumed/plumed2.git
+        git clone https://github.com/Iximiel/plumed2.git
         cd plumed2
+        git checkout patchqe7_2 
         ./configure CXX="ccache $CXX" --disable-dependency-tracking LDFLAGS=-Wl,-rpath,$LD_LIBRARY_PATH --prefix="$HOME/opt"
         make -j 4
         make install
@@ -86,7 +87,7 @@ jobs:
         cd q-e
         git checkout qe-7.2
         ./configure --prefix="$HOME/opt"
-        plumed patch --engine qespresso-7.0 -p -f
+        plumed patch --engine qespresso-7.2 -p
         make pw
         make install
     - name: Check files
